--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -22,10 +22,8 @@ services:
     container_name: grafana
     ports:
       - "3000:3000"
-#    volumes:
-#      - ./monitoring/provisioning:/etc/grafana/provisioning
-##    environment:
-#     - ""
+    volumes:
+      - ./monitoring/provisioning:/etc/grafana/provisioning
     depends_on:
       - prometheus
     networks:
