Add tracing and Zipkin integration for observability
Enable distributed tracing by adding OpenTelemetry dependencies, configuring tracing settings, and integrating Zipkin in Docker Compose. Implement REST communication using RestTemplate and update logging patterns to include tracing information.

--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -33,6 +33,12 @@ services:
     networks:
       - observabilityNetwork
 
+  zipkin:
+    image: openzipkin/zipkin:latest
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+
 networks:
   observabilityNetwork:
     driver: bridge
